--- a/tests/test2/root_ca/openssl.conf
+++ b/tests/test2/root_ca/openssl.conf
@@ -1,5 +1,6 @@
 [ req ]
 default_bits           			= 4096
+default_md						= sha256
 default_keyfile        			= rootca_key.pem
 distinguished_name     			= req_distinguished_name
 attributes             			= req_attributes
@@ -27,7 +28,7 @@ countryName_min					= 2
 countryName_max					= 2
 
 stateOrProvinceName				= State or Province Name (full name)
-stateOrProvinceName_default		= None
+stateOrProvinceName_default		= Seoul
 
 localityName					= Locality Name (eg, city)
 localityName_default			= Seoul
