intermediate implementation of command line shell script

--- a/tests/test3/scripts/intermediate_openssl.cnf
+++ b/tests/test3/scripts/intermediate_openssl.cnf
@@ -1,4 +1,5 @@
-# https://jamielinux.com/docs/openssl-certificate-authority/create-the-root-pair.html
+# OpenSSL intermediate CA configuration file.
+# Copy to `/root/ca/intermediate/openssl.cnf`.
 
 [ ca ]
 # `man ca`
@@ -6,7 +7,7 @@ default_ca = CA_default
 
 [ CA_default ]
 # Directory and file locations.
-dir               = root/ca
+dir               = root/ca/intermediate
 certs             = $dir/certs
 crl_dir           = $dir/crl
 new_certs_dir     = $dir/newcerts
@@ -15,12 +16,12 @@ serial            = $dir/serial
 RANDFILE          = $dir/private/.rand
 
 # The root key and root certificate.
-private_key       = $dir/private/ca.key.pem
-certificate       = $dir/certs/ca.cert.pem
+private_key       = $dir/private/intermediate.key.pem
+certificate       = $dir/certs/intermediate.cert.pem
 
 # For certificate revocation lists.
 crlnumber         = $dir/crlnumber
-crl               = $dir/crl/ca.crl.pem
+crl               = $dir/crl/intermediate.crl.pem
 crl_extensions    = crl_ext
 default_crl_days  = 30
 
@@ -31,7 +32,7 @@ name_opt          = ca_default
 cert_opt          = ca_default
 default_days      = 375
 preserve          = no
-policy            = policy_strict
+policy            = policy_loose
 
 [ policy_strict ]
 # The root CA should only sign intermediate certificates that match.
@@ -81,8 +82,8 @@ countryName_default             = GB
 stateOrProvinceName_default     = England
 localityName_default            =
 0.organizationName_default      = Alice Ltd
-#organizationalUnitName_default =
-#emailAddress_default           =
+organizationalUnitName_default  =
+emailAddress_default            =
 
 [ v3_ca ]
 # Extensions for a typical CA (`man x509v3_config`).
