--- a/tests/test3/scripts/intermediate_openssl.cnf
+++ b/tests/test3/scripts/intermediate_openssl.cnf
@@ -1,5 +1,7 @@
-# OpenSSL intermediate CA configuration file.
-# Copy to `/root/ca/intermediate/openssl.cnf`.
+HOME			  = /home/hskim
+CERT_HOME		  = $HOME/certificates
+INTERMEDIATE_HOME = $CERT_HOME/intermediate
+dir               = $INTERMEDIATE_HOME
 
 [ ca ]
 # `man ca`
@@ -7,7 +9,6 @@ default_ca = CA_default
 
 [ CA_default ]
 # Directory and file locations.
-dir               = root/ca/intermediate
 certs             = $dir/certs
 crl_dir           = $dir/crl
 new_certs_dir     = $dir/newcerts
@@ -30,7 +31,7 @@ default_md        = sha256
 
 name_opt          = ca_default
 cert_opt          = ca_default
-default_days      = 375
+default_days      = 3750
 preserve          = no
 policy            = policy_loose
 
@@ -57,7 +58,7 @@ emailAddress            = optional
 
 [ req ]
 # Options for the `req` tool (`man req`).
-default_bits        = 2048
+default_bits        = 4096
 distinguished_name  = req_distinguished_name
 string_mask         = utf8only
 
