add intermediate codes

--- a/tests/test3/scripts/customer_openssl.cnf
+++ b/tests/test3/scripts/customer_openssl.cnf
@@ -39,6 +39,7 @@ cert_opt          = ca_default
 default_days      = 3750
 preserve          = no
 policy            = policy_loose
+x509_extensions   = usr_cert
 
 [ policy_strict ]
 # The root CA should only sign intermediate certificates that match.
