--- a/tests/test2/CMakeLists.txt
+++ b/tests/test2/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(biowrapper)
 add_subdirectory(loadkeywrapper)
+add_subdirectory(loadcnfwrapper)
