--- a/tests/test2/CMakeLists.txt
+++ b/tests/test2/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(biowrapper)
-add_subdirectory(loadkeywrapper)
-add_subdirectory(loadcnfwrapper)
+add_subdirectory(keywrapper)
+add_subdirectory(cnfwrapper)
+add_subdirectory(certwrapper)
