add temporal codes

--- a/tests/test2/CMakeLists.txt
+++ b/tests/test2/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(keywrapper)
 add_subdirectory(cnfwrapper)
 add_subdirectory(certwrapper)
 add_subdirectory(csrwrapper)
+add_subdirectory(cawrapper)
