--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 
 set(SRCS
 	"log.cpp"
+	"certificateManager.cpp"
 )
 
 add_executable(${PROJECT_NAME}
@@ -16,7 +17,8 @@ add_library(crypto
 
 set_target_properties(crypto
 	PROPERTIES IMPORTED_LOCATION
-	${CMAKE_SOURCE_DIR}/lib/openssl/libs/libcrypto.so
+	#${CMAKE_SOURCE_DIR}/lib/openssl/libs/libcrypto.so
+	${CMAKE_SOURCE_DIR}/lib/openssl/libs/libcrypto.so.3
 )
 
 include_directories(
