--- a/test/OpensslRsaKeyWrapper/CMakeLists.txt
+++ b/test/OpensslRsaKeyWrapper/CMakeLists.txt
@@ -1,12 +1,11 @@
-project(certificate-manager)
+project(OpensslKeyWrapper)
 cmake_minimum_required(VERSION 3.10)
 
 set(SRCS
-	"Log.cpp"
-	"OpensslBioWrapper.cpp"
-	"OpensslConfWrapper.cpp"
-	"OpensslRsaKeyWrapper.cpp"
-	"CertificateManager.cpp"
+	${CMAKE_SOURCE_DIR}/src/Log.cpp
+	${CMAKE_SOURCE_DIR}/src/OpensslBioWrapper.cpp
+	${CMAKE_SOURCE_DIR}/src/OpensslRsaKeyWrapper.cpp
+	"OpensslRsaKeyWrapperTest.cpp"
 )
 
 add_executable(${PROJECT_NAME}
@@ -25,8 +24,8 @@ set_target_properties(crypto
 )
 
 include_directories(
-	${CMAKE_SOURCE_DIR}/lib/openssl/include
 	${CMAKE_SOURCE_DIR}/include
+	${CMAKE_SOURCE_DIR}/lib/openssl/include
 )
 
 target_link_libraries(
