--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.10)
 add_subdirectory(Log)
 add_subdirectory(OpensslBioWrapper)
 add_subdirectory(OpensslConfWrapper)
+add_subdirectory(OpensslRsaKeyWrapper)
