--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(Log)
 add_subdirectory(OpensslBioWrapper)
 add_subdirectory(OpensslConfWrapper)
 add_subdirectory(OpensslRsaKeyWrapper)
+add_subdirectory(OpensslCertWrapper)
