--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(OpensslBioWrapper)
 add_subdirectory(OpensslConfWrapper)
 add_subdirectory(OpensslRsaKeyWrapper)
 add_subdirectory(OpensslCertWrapper)
+add_subdirectory(OpensslCsrWrapper)
