--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(OpensslConfWrapper)
 add_subdirectory(OpensslRsaKeyWrapper)
 add_subdirectory(OpensslCertWrapper)
 add_subdirectory(OpensslCsrWrapper)
+add_subdirectory(OpensslCaWrapper)
