--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(Log)
 add_subdirectory(OpensslBioWrapper)
-add_subdirectory(OpensslConfWrapper)
-add_subdirectory(OpensslRsaKeyWrapper)
-add_subdirectory(OpensslCertWrapper)
-add_subdirectory(OpensslCsrWrapper)
-add_subdirectory(OpensslCaWrapper)
+#add_subdirectory(OpensslConfWrapper)
+#add_subdirectory(OpensslRsaKeyWrapper)
+#add_subdirectory(OpensslCertWrapper)
+#add_subdirectory(OpensslCsrWrapper)
+#add_subdirectory(OpensslCaWrapper)
