--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,6 @@ add_subdirectory(Log)
 add_subdirectory(OpensslBioWrapper)
 #add_subdirectory(OpensslConfWrapper)
 #add_subdirectory(OpensslRsaKeyWrapper)
-#add_subdirectory(OpensslCertWrapper)
+add_subdirectory(OpensslCertWrapper)
 #add_subdirectory(OpensslCsrWrapper)
 #add_subdirectory(OpensslCaWrapper)
