--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.10)
 set(SRCS
 	"Log.cpp"
 	"OpensslBioWrapper.cpp"
-#	"OpensslConfWrapper.cpp"
+	"OpensslConfWrapper.cpp"
 #	"OpensslRsaKeyWrapper.cpp"
 	"OpensslCertWrapper.cpp"
 #	"OpensslCsrWrapper.cpp"
