--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,34 @@
 
 project(certificate-manager)
 
+include(FindPkgConfig)
+
+pkg_check_modules(GLIB2 REQUIRED glib-2.0)
+webos_add_compiler_flags(ALL ${GLIB2_CFLAGS})
+
+pkg_check_modules(LUNASERVICE2 REQUIRED luna-service2)
+webos_add_compiler_flags(ALL ${LUNASERVICE2_CFLAGS})
+
+pkg_check_modules(PMLOG REQUIRED PmLogLib)
+include_directories(${PMLOG_INCLUDE_DIRS})
+webos_add_compiler_flags(ALL ${PMLOG_CFLAGS_OTHER})
+
+pkg_check_modules(PBNJSON_CPP REQUIRED pbnjson_cpp)
+include_directories(${PBNJSON_CPP_INCLUDE_DIRS})
+webos_add_compiler_flags(ALL ${PBNJSON_CPP_CFLAGS_OTHER})
+
+pkg_check_modules(DB8 REQUIRED db8)
+include_directories(${DB8_INCLUDE_DIRS})
+webos_add_compiler_flags(ALL ${DB8_CFLAGS_OTHER})
+
+pkg_check_modules(OPENSSL REQUIRED openssl)
+include_directories(${OPENSSL_INCLUDE_DIRS})
+webos_add_compiler_flags(ALL ${OPENSSL_CFLAGS_OTHER})
+
+
+include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
 set(SOURCES
 	"Log.cpp"
 	"OpensslBioWrapper.cpp"
@@ -27,52 +55,19 @@ set(SOURCES
 	"CertificateManager.cpp"
 )
 
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/include)
-
-include(FindPkgConfig)
-
-pkg_check_modules(GLIB2 REQUIRED glib-2.0)
-webos_add_compiler_flags(ALL ${GLIB2_CFLAGS})
-
-pkg_check_modules(LUNASERVICE REQUIRED luna-service2)
-webos_add_compiler_flags(ALL ${LUNASERVICE_CFLAGS})
-
-pkg_check_modules(PMLOG REQUIRED PmLogLib)
-include_directories(${PMLOG_INCLUDE_DIRS})
-webos_add_compiler_flags(ALL ${PMLOG_CFLAGS_OTHER})
-
-pkg_check_modules(PBNJSON_CPP REQUIRED pbnjson_cpp)
-include_directories(${PBNJSON_CPP_INCLUDE_DIRS})
-webos_add_compiler_flags(ALL ${PBNJSON_CPP_CFLAGS_OTHER})
-
-#pkg_check_modules(DB8 REQUIRED db8)
-#include_directories(${DB8_INCLUDE_DIRS})
-#webos_add_compiler_flags(ALL ${DB8_CFLAGS_OTHER})
-
-pkg_check_modules(OPENSSL REQUIRED openssl)
-include_directories(${OPENSSL_INCLUDE_DIRS})
-webos_add_compiler_flags(ALL ${OPENSSL_CFLAGS_OTHER})
-
-#pkg_check_modules(LUNASERVICE2PP REQUIRED luna-service2++)
-#include_directories(${LUNASERVICE2PP_INCLUDE_DIRS})
-#webos_add_compiler_flags(ALL ${LUNASERVICE2PP_CFLAGS_OTHER})
-
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable(${PROJECT_NAME} ${SOURCES})
-
 target_link_libraries (${PROJECT_NAME}
 	${GLIB2_LDFLAGS}
-	${PBNJSON_CPP_LDFLAGS}
-	${PMLOG_LDFLAGS}
 	${LUNASERVICE2_LDFLAGS}
-	${LUNASERVICE2PP_LDFLAGS}
+	${PMLOG_LDFLAGS}	
+	${PBNJSON_CPP_LDFLAGS}
 	${DB8_LDFLAGS}
 	${OPENSSL_LDFLAGS}
 )
 
 webos_build_program(NAME ${PROJECT_NAME})
+webos_build_system_bus_files()
+webos_build_db8_files()
 
 # add bin file /usr/bin/certificate-manager
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
