modify role files

--- a/files/sysbus/com.webos.service.certificateManager.role.json.prv.in
+++ b/files/sysbus/com.webos.service.certificateManager.role.json.prv.in
@@ -5,7 +5,8 @@
 	"permissions" : [
 		{
 			"service" : "com.webos.service.certificateManager",
-			"outbound" : ["com.palm.db"]
+			"inbound" : ["*"]
+			"outbound" : ["*"]
 		}
 	]
 }
