--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 2.8.7)
-project(certificate-manager)
+project(com.webos.service.certificatemanager)
 
 include(webOS/webOS)
 
